@@ -16,6 +16,8 @@ Revision history for Perl extension App::Sqitch
        Thanks to Dmitriy for the pull request!
      - Fixed test failiures due to new warnings from File::Path on Perl
        5.23.1.
+     - Added support for the `--set` option when deploying to MySQL. Thanks to
+       Chris Bandy for figuring out how to do it!
 
 0.9992 2015-05-20T23:51:41Z
      - On PostgreSQL, Sqitch now sets the `client_encoding` parameter to
